fix: project section mobile alignment change

--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ header ul a{
     width: 50%;
     position: relative;
     cursor: pointer;
-    min-width: 400px;
+    min-width: 0;
     transition: 0.5s;
 
 }
@@ -243,7 +243,7 @@ header ul a{
 .project-info{
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     width: 50%;
     padding-left: 10%;
@@ -631,7 +631,6 @@ footer h1{
         text-align: center;
         width: 100%;
         margin: 0 auto 50px auto;
-        position: relative;
     }
 
     .projects-section{
@@ -639,24 +638,22 @@ footer h1{
     }
 
     .project-videobox video{
-        width: 250px;
-        margin-left: -100px
+        width: 100%;
+        margin-left: 0px
     }
 
     .project-info{
         padding-left: 0;
-        margin-left: -50px;
+        margin-left: 0px;
     }
 
     .project-info h1{
         font-size: 20px;
         max-width: 200px;
-        text-wrap: wrap;
     }
 
     .project-info p{
-        font-size: 10px;
-        text-wrap: wrap;
+        font-size: 14px;
         max-width: 200px;
         min-width: 0;
     }
@@ -724,25 +721,47 @@ footer h1{
 
     .project-videobox video{
         width: 100%;
-        height: auto;
-        border-radius: 15px;
+        margin-left: 0;
+        display: block;
     }
 
     .project-info{
-        width: 90%;
-        margin-top: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        width: 100%;
+        height: auto;
+        padding: 0;
+        margin: 0;
+        margin-top: 10px;
     }
 
-    .project-info h1, .project-info p{
+    .project-info h1{
+        margin-top: 10px;
         text-align: left;
-        margin: 5px 0;
+        display: block;
+    }
+
+    .project-info p {
+        text-align: left;
+        display: block;
+        width: 100%;
+        max-width: none;
+        min-width: 0;
+        font-size: 14px;
     }
 
     .project-info button {
-        align-self: flex-start;
+        width: fit-content;
+        max-width: 100%;
+        height: 40px;
+        padding: 0 15px;
+        white-space: nowrap;
+        line-height: 1;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        min-width: unset;
         margin-top: 10px;
         margin-bottom: 100px;
     }
